# metis

./: .gitignore  .rustfmt.toml  404.html  Cargo.toml  README.md  access-control.html  governance.html  index.html  overview.html  print.html  searchindex.js  searchindex.json  security.html  tokens.html  tools.html  use-component.html  utilities.html
access-control/: access-control-enumerable.html  access-control.html  ownable.html
contracts/impls/token/erc20/: Cargo.toml
contracts/impls/zkp/groth16/: Cargo.toml
contracts/patra-env/: Cargo.toml  lib.rs
contracts/stubs/token/trait-erc20/: Cargo.toml  README.md
contracts/traits/access/ownership/: Cargo.toml  lib.rs
contracts/traits/token/erc20/: Cargo.toml  lib.rs
crates/components/access/control/: Cargo.toml
crates/components/access/control-enumerable/: Cargo.toml
crates/components/access/control-enumerable/src/: lib.rs
crates/components/access/control-enumerable/tests/: test.rs  test_enumerable.rs
crates/components/access/control-enumerable/tests/mocks/: access_control_enumerable_mock.rs
crates/components/access/control/src/: lib.rs  module.rs  types.rs
crates/components/access/control/tests/: test_access_control.rs
crates/components/access/control/tests/mocks/: access_control_mock.rs
crates/components/access/control/tests/utils/: event.rs  mod.rs
crates/components/access/ownable/: Cargo.toml
crates/components/access/ownable/src/: lib.rs  module.rs
crates/components/governance/timelock-controller/: Cargo.toml
crates/components/governance/timelock-controller/receiver/: Cargo.toml
crates/components/governance/timelock-controller/receiver/src/: lib.rs
crates/components/governance/timelock-controller/src/: lib.rs
crates/components/security/pausable/: Cargo.toml
crates/components/security/pausable/src/: lib.rs  module.rs
crates/components/security/pausable/tests/: mock.rs
crates/components/security/reentrancy-guard/: Cargo.toml
crates/components/security/reentrancy-guard/src/: lib.rs  module.rs
crates/components/security/reentrancy-guard/tests/: mock.rs
crates/components/token/erc1155/: Cargo.toml
crates/components/token/erc1155/receiver/: Cargo.toml
crates/components/token/erc1155/receiver/src/: lib.rs
crates/components/token/erc1155/src/: basic.rs  extensions.rs  lib.rs  module.rs
crates/components/token/erc1155/src/extensions/: burnable.rs  pausable.rs
crates/components/token/erc1155/tests/: test_erc1155_basic.rs  test_erc1155_burnable.rs  test_erc1155_pausable.rs
crates/components/token/erc1155/tests/mocks/: basic.rs  burnable.rs  pausable.rs
crates/components/token/erc20/: Cargo.toml
crates/components/token/erc20/src/: erc20.rs  erc20_basic.rs  erc20_hookable.rs  extensions.rs  lib.rs  module.rs
crates/components/token/erc20/src/extensions/: burnable.rs  capped.rs  hookable.rs  pausable.rs
crates/components/token/erc20/tests/: lib.rs  test_erc20.rs  test_erc20_basic.rs  test_erc20_capped.rs  test_erc20_pausable.rs
crates/components/token/erc20/tests/mocks/: behavior.rs  erc20_capped_mock.rs  erc20_mock.rs
crates/components/token/erc20/tests/utils/: event.rs
crates/components/token/erc721/: Cargo.toml
crates/components/token/erc721/receiver/: Cargo.toml
crates/components/token/erc721/receiver/src/: lib.rs
crates/components/token/erc721/src/: basic.rs  extensions.rs  lib.rs  module.rs  types.rs
crates/components/token/erc721/src/extensions/: burnable.rs  enumerable.rs  pausable.rs  urlstorage.rs
crates/components/token/erc721/tests/: test_erc721_basic.rs  test_erc721_burnable.rs  test_erc721_enumerable.rs  test_erc721_pausable.rs
crates/components/token/erc721/tests/mocks/: basic.rs  burnable.rs  enumerable.rs  pausable.rs
crates/components/token/erc721/types/: Cargo.toml
crates/components/token/erc721/types/src/: lib.rs
crates/components/utils/escrow/: Cargo.toml
crates/components/utils/escrow/src/: lib.rs  module.rs
crates/components/utils/escrow/stub/: Cargo.toml
crates/components/utils/escrow/stub/src/: lib.rs
crates/components/utils/escrow/tests/: test_escrow.rs
crates/contracts/token/erc20/: Cargo.toml
crates/contracts/token/erc20/src/: erc20.rs  erc20_burnable.rs  lib.rs  module.rs
crates/contracts/token/erc20/src/extensions/: burnable.rs
crates/lang/: Cargo.toml
crates/lang/codegen/: Cargo.toml
crates/lang/codegen/src/: components.rs  env.rs  event.rs  extend.rs  import.rs  lib.rs  stub.rs  utils.rs
crates/lang/codegen/src/components/: erc165.rs  reentrancy_guard.rs
crates/lang/contract/: Cargo.toml
crates/lang/contract/src/: lib.rs  traits.rs
crates/lang/macro/: Cargo.toml
crates/lang/macro/src/: contract.rs  erc165.rs  import.rs  lib.rs  reentrancy_guard.rs  stub.rs  utils.rs
crates/lang/macro/tests/: 01-flipper.rs  02-erc20ownable.rs  03-erc20burnable.rs  04-erc165.rs  05-hash.rs  contract.rs  contract_flipper.rs  erc20ownable.rs
crates/lang/macro/tests/contract/: 01-flipper-contract.rs  02-flipper-owner-contract.rs  03-stub.rs  parse.rs
crates/lang/src/: lib.rs
crates/utils/macro/: Cargo.toml
crates/utils/macro/src/: contract.rs  extend.rs  lib.rs
crates/utils/macro/tests/: contract.rs  contract_flipper.rs
crates/utils/macro/tests/contract/: 01-flipper-contract.rs  02-flipper-owner-contract.rs  parse.rs
docs/: README.md  _navbar.md  book.toml  index.html
example/: README.md  package.json  redspot.config.ts  run_test.sh  tsconfig.json
example/contracts/governance/timelock-controller/: Cargo.toml  lib.rs
example/contracts/token/erc20-pausable/: Cargo.toml  lib.rs
example/contracts/token/erc721-burnable/: Cargo.toml  lib.rs
example/contracts/token/erc721-urlstorage/: Cargo.toml  lib.rs
example/contracts/tools/erc165/: Cargo.toml  lib.rs
flip/: Cargo.toml  lib.rs
governance/: timelock-controller.html
groth16/: Cargo.toml  lib.rs
impls/zkp/groth16/: .gitignore  Cargo.toml  README.md
ownership/: lib.rs
patra-env/: Cargo.toml
security/: pausable.html  reentrancy-guard.html
tokens/: erc1155.html  erc20.html  erc721.html  erc777.html
tools/: erc165.html
(+179 files in other folders)
