[workspace]
members = [
    "crates/components/access/ownable",
    "crates/components/access/control",
    "crates/components/access/control-enumerable/",
    "crates/components/token/erc20",
    "crates/components/security/pausable",
    "crates/lang/",
    "crates/lang/macro",
    "crates/lang/contract",
    "crates/lang/codegen",

    "contracts/patra-env",
    "contracts/traits/access/ownership",
    "contracts/traits/token/erc20",
]
exclude = [
    "examples/",
    "contracts/impls",
    "contracts/stub",
]

[profile.release]
panic = "abort"
lto = true
