[package]
name = "groth16"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/patractlabs/ink", branch = "features/nightly", default-features = false }
ink_metadata = { git = "https://github.com/patractlabs/ink", branch = "features/nightly", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/patractlabs/ink", branch = "features/nightly", default-features = false }
ink_storage = { git = "https://github.com/patractlabs/ink", branch = "features/nightly", default-features = false }
ink_lang = { git = "https://github.com/patractlabs/ink", branch = "features/nightly", default-features = false }
ink_prelude = { git = "https://github.com/patractlabs/ink", branch = "features/nightly", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4.1", default-features = false, features = ["derive"], optional = true }

[dependencies.curve]
package = "megaclite-arkworks"
git = "https://github.com/patractlabs/megaclite"
features = [ "ink" ]

[lib]
name = "groth16"
path = "lib.rs"
crate-type = [ "cdylib" ]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
