[package]
name = "patra_env"
version = "0.1.0"
authors = ["tyler <tyler@patract.io>"]
edition = "2018"

[dependencies]
ink_env = { version = "3.0.0-rc4", default-features = false }

[lib]
name = "patra_env"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_env/std",
]
