[package]
authors = ["tyler <tyler@patract.io>"]
edition = "2018"
name = "patra_env"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", default-features = false}

[lib]
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib", # Used for ABI generation.
  "rlib",
]
name = "patra_env"
path = "lib.rs"

[features]
default = ["std"]
std = [
  "ink_env/std",
]
