[package]
name = "metis_lang_codegen"
version = "0.1.0"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
description = "some macros for patterns support for ink! contract."
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "metis_lang_codegen"

[dependencies]
quote = "1"
syn = { version = "1.0", features = ["parsing", "full", "extra-traits"] }
proc-macro2 = "1.0"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
itertools = "0.10"
either = { version = "1.5", default-features = false }
regex = "1.3"
blake2 = "0.9"
heck = "0.3.1"
impl-serde = "0.3.1"
convert_case = "0.4.0"
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }

ink_lang_ir = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang_codegen = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

[features]
default = ["std"]
std = ["itertools/use_std", "either/use_std", "ink_lang_ir/std"]
