[package]
authors = ["patract labs <https://github.com/patractlabs>"]
categories = ["no-std", "embedded"]
description = "some macros for patterns support for ink! contract."
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
name = "metis_lang_codegen"
version = "0.1.0"

[lib]
name = "metis_lang_codegen"

[dependencies]
blake2 = "0.9"
convert_case = "0.4.0"
derive_more = {version = "0.99", default-features = false, features = ["from"]}
either = {version = "1.5", default-features = false}
heck = "0.3.1"
impl-serde = "0.3.1"
itertools = "0.10"
proc-macro2 = "1.0"
quote = "1"
regex = "1.3"
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"]}
syn = {version = "1.0", features = ["parsing", "full", "extra-traits"]}

ink_lang_codegen = {version = "3.0.0-rc5", default-features = false}
ink_lang_ir = {version = "3.0.0-rc5", default-features = false}

[features]
default = ["std"]
std = ["itertools/use_std", "either/use_std", "ink_lang_ir/std"]
