[package]
authors = ["patract labs <https://github.com/patractlabs>"]
categories = ["no-std", "embedded"]
description = "some macros for patterns support for ink! contract."
edition = "2018"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
name = "metis_lang_macro"
version = "0.1.0"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

blake2 = "0.9"
impl-serde = "0.3.1"


ink_lang_codegen = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_lang_ir = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
num-traits = {version = "0.2", default-features = false, features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"]}

metis_lang_codegen = {path = "../codegen/", default-features = false}

[dev-dependencies]
metis_contract = {path = "../contract"}
metis_erc20 = {path = "../../components/token/erc20"}
metis_ownable = {path = "../../components/access/ownable"}
trybuild = {version = "1.0", features = ["diff"]}

ink_env = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_lang = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_lang_codegen = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_lang_ir = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_metadata = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_prelude = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_primitives = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_storage = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}

num-traits = {version = "0.2", features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", features = ["derive"]}
scale-info = {version = "0.6", features = ["derive"]}

blake2 = "0.9"
impl-serde = "0.3.1"

proc-macro2 = "1"
quote = "1"
syn = "1"

metis_lang = {path = "../../../crates/lang"}

[lib]
name = "metis_lang_macro"
proc-macro = true

[[test]]
name = "tests"
path = "tests/contract.rs"

[[test]]
name = "test_hash"
path = "tests/05-hash.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_lang_ir/std",
  "ink_lang_codegen/std",
  "scale/std",
  "scale-info/std",
  "num-traits/std",
  "metis_lang_codegen/std",
]
