[package]
name = "metis_util_macro"
version = "0.1.0"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
description = "some macros for patterns support for ink! contract."
keywords = ["wasm", "parity", "webassembly", "blockchain", "edsl"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang_ir = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false, features = ["i128"] }

syn = "1"
proc-macro2 = "1"

metis_codegen = { path = "../codegen/", default-features = false }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
metis-contract = { path = "../../../crates/utils/contract" }
metis-erc20 = { path = "../../../crates/contracts/token/erc20" }
metis-ownable = { path = "../../../crates/contracts/access/ownable" }

ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink"}
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink" }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink" }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink" }
ink_lang_ir = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink" }

scale = { package = "parity-scale-codec", version = "2.1", features = ["derive"] }
scale-info = { version = "0.6", features = ["derive"] }

[lib]
name = "metis_util_macro"
proc-macro = true

[[test]]
name = "tests"
path = "tests/contract.rs"

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "num-traits/std",
    "metis_codegen/std",
]
ink-as-dependency = []
