[package]
name = "erc20"
version = "0.1.0"
authors = ["Patract Labs <tyler@patract.io>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc4", default-features = false }
ink_metadata = { version = "3.0.0-rc4", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc4", default-features = false }
ink_storage = { version = "3.0.0-rc4", default-features = false }
ink_lang = { version = "3.0.0-rc4", default-features = false }
ink_prelude = { version = "3.0.0-rc4", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

erc20-trait = { path = "../../../traits/token/erc20", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "erc20"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "erc20-trait/std",
]
ink-as-dependency = []
