[package]
authors = ["[your_name] <[your_email]>"]
edition = "2018"
name = "groth16"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", default-features = false}
ink_lang = {version = "3.0.0-rc5", default-features = false}
ink_metadata = {version = "3.0.0-rc5", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "3.0.0-rc5", default-features = false}
ink_primitives = {version = "3.0.0-rc5", default-features = false}
ink_storage = {version = "3.0.0-rc5", default-features = false}

scale = {package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"], optional = true}

[dependencies.curve]
default-features = false
features = ["ink"]
git = "https://github.com/patractlabs/zkmega"
package = "zkmega-arkworks"

[lib]
crate-type = ["cdylib"]
name = "groth16"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
]
