[package]
authors = ["Patract Labs <tyler@patract.io>"]
edition = "2018"
name = "trait-erc20-stub"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_lang = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_metadata = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_primitives = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_storage = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}

scale = {package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"], optional = true}

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[lib]
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib", # Used for ABI generation.
  "rlib",
]
name = "trait_erc20_stub"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_primitives/std",
  "ink_metadata",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "ink_prelude/std",
  "scale/std",
  "scale-info",
  "scale-info/std",
]
