[package]
authors = ["Patract Labs <tyler@patract.io>"]
edition = "2018"
name = "erc20-trait"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", default-features = false}
ink_lang = {version = "3.0.0-rc5", default-features = false}
ink_metadata = {version = "3.0.0-rc5", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "3.0.0-rc5", default-features = false}
ink_primitives = {version = "3.0.0-rc5", default-features = false}
ink_storage = {version = "3.0.0-rc5", default-features = false}

scale = {package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"]}
scale-info = {version = "1.0", default-features = false, features = ["derive"], optional = true}

[lib]
crate-type = [
  # Used for normal contract Wasm blobs.
  "cdylib", # Used for ABI generation.
  "rlib",
]
name = "erc20_trait"
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
]
