[package]
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
name = "metis_access_control_enumerable"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", default-features = false}
ink_metadata = {version = "3.0.0-rc5", default-features = false, features = ["derive"], optional = true}
ink_primitives = {version = "3.0.0-rc5", default-features = false}
ink_storage = {version = "3.0.0-rc5", default-features = false}

num-traits = {version = "0.2", default-features = false, features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"]}

metis_access_control = {path = "../control/", default-features = false}
metis_lang = {path = "../../../lang/", default-features = false}

[dev-dependencies]
metis_access_control = {path = "../control/"}
metis_access_control_enumerable = {path = "."}
trybuild = {version = "1.0", features = ["diff"]}

ink_env = {version = "3.0.0-rc5"}
ink_lang = {version = "3.0.0-rc5"}
ink_lang_codegen = {version = "3.0.0-rc5"}
ink_lang_ir = {version = "3.0.0-rc5"}
ink_metadata = {version = "3.0.0-rc5"}
ink_primitives = {version = "3.0.0-rc5"}
ink_storage = {version = "3.0.0-rc5"}

num-traits = {version = "0.2", features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", features = ["derive"]}
scale-info = {version = "0.6", features = ["derive"]}

metis_lang = {path = "../../../lang/"}

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_storage/std",
  "ink_env/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
  "metis_lang/std",
]
