[package]
name = "metis_access_control"
version = "0.1.0"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
ink_metadata = { version = "3.0.0-rc4", default-features = false, features = ["derive"], optional = true }
ink_storage = { version = "3.0.0-rc4", default-features = false }
ink_primitives = { version = "3.0.0-rc4", default-features = false }
ink_env = { version = "3.0.0-rc4", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false, features = ["i128"] }

metis_lang = { path = "../../../lang/", default-features = false }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
metis_access_control = { path = "." }

ink_primitives = { version = "3.0.0-rc4" }
ink_metadata = { version = "3.0.0-rc4" }
ink_storage = { version = "3.0.0-rc4" }
ink_lang = { version = "3.0.0-rc4" }
ink_lang_ir = { version = "3.0.0-rc4" }
ink_lang_codegen = { version = "3.0.0-rc4" }
ink_env = { version = "3.0.0-rc4" }

scale = { package = "parity-scale-codec", version = "2.1", features = ["derive"] }
scale-info = { version = "0.6", features = ["derive"] }
num-traits = { version = "0.2", features = ["i128"] }

metis_lang = { path = "../../../lang/" }


[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_storage/std",
    "ink_env/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "metis_lang/std",
]
ink-as-dependency = []
