[package]
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
name = "metis_ownable"
version = "0.1.0"

[dependencies]
ink_metadata = {version = "3.0.0-rc5", default-features = false, features = ["derive"], optional = true}
ink_storage = {version = "3.0.0-rc5", default-features = false}

num-traits = {version = "0.2", default-features = false, features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"]}

metis_lang = {path = "../../../lang/", default-features = false}

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_storage/std",
  "scale/std",
  "scale-info/std",
  "metis_lang/std",
]
