[package]
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
name = "metis_reentrancy_guard"
version = "0.1.0"

[dependencies]
ink_metadata = {version = "3.0.0-rc5", default-features = false, features = ["derive"], optional = true}
ink_primitives = {version = "3.0.0-rc5", default-features = false}
ink_storage = {version = "3.0.0-rc5", default-features = false}

scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"]}

metis_lang = {path = "../../../lang/", default-features = false}

[dev-dependencies]
metis_ownable = {path = "../../../components/access/ownable"}
metis_reentrancy_guard = {path = "."}
trybuild = {version = "1.0", features = ["diff"]}

ink_env = {version = "3.0.0-rc5"}
ink_lang = {version = "3.0.0-rc5"}
ink_lang_codegen = {version = "3.0.0-rc5"}
ink_lang_ir = {version = "3.0.0-rc5"}
ink_metadata = {version = "3.0.0-rc5"}
ink_primitives = {version = "3.0.0-rc5"}
ink_storage = {version = "3.0.0-rc5"}

num-traits = {version = "0.2", features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", features = ["derive"]}
scale-info = {version = "0.6", features = ["derive"]}

metis_lang = {path = "../../../lang/"}

[[test]]
name = "test_mock"
path = "tests/mock.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_storage/std",
  "ink_primitives/std",
  "scale/std",
  "scale-info/std",
  "metis_lang/std",
]
