[package]
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"
name = "metis_erc1155"
version = "0.1.0"

[dependencies]
ink_env = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_lang = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_lang_ir = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_metadata = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true}
ink_prelude = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_primitives = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}
ink_storage = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink", default-features = false}

hex = {version = "0.4", default-features = false}
num-traits = {version = "0.2", default-features = false, features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"]}
scale-info = {version = "0.6", default-features = false, features = ["derive"]}

metis_lang = {path = "../../../lang/", default-features = false}

metis_ownable = {path = "../../access/ownable", default-features = false}
metis_pausable = {path = "../../security/pausable", default-features = false}

metis_erc1155_receiver = {path = "./receiver", default-features = false, features = ["ink-as-dependency"]}
metis_erc721_types = {path = "../erc721/types", default-features = false}

[dev-dependencies]
metis_erc1155 = {path = "."}
metis_ownable = {path = "../../access/ownable"}
metis_pausable = {path = "../../security/pausable"}
trybuild = {version = "1.0", features = ["diff"]}

ink_env = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_lang = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_lang_codegen = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_lang_ir = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_metadata = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_primitives = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}
ink_storage = {version = "3.0.0-rc5", git = "https://github.com/paritytech/ink"}

hex = {version = "0.4"}
num-traits = {version = "0.2", features = ["i128"]}
scale = {package = "parity-scale-codec", version = "2.1", features = ["derive"]}
scale-info = {version = "0.6", features = ["derive"]}

metis_lang = {path = "../../../lang/"}

metis_erc1155_receiver = {path = "./receiver"}
metis_erc721_types = {path = "../erc721/types"}

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink_metadata/std",
  "ink_storage/std",
  "ink_prelude/std",
  "ink_primitives/std",
  "ink_env/std",
  "ink_lang/std",
  "scale/std",
  "scale-info/std",
  "metis_lang/std",
  "metis_ownable/std",
  "metis_pausable/std",
  "metis_erc721_types/std",
  "metis_erc1155_receiver/std",
]
